fixes horizontal scrolling

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -15,3 +15,8 @@
     cursor: pointer;
     margin-right: 12px;
 }
+
+body {
+    position: relative;
+    min-height: 100%;
+}
