--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,7 @@ img {
     float: right;
     margin-left: 10px;
 }
+
+* {
+    margin: 0;
+}
